# Pong

./: build.gradle  gradle.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/michael/pong/: ExampleInstrumentedTest.java  ExampleInstrumentedTest.kt  GtestRunner.java  TargetLibrary.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Engine.cpp  Engine.h  MessageBus.cpp  MessageBus.h  Renderer.cpp  Renderer.h  android_main.cpp  common.hpp  glutil.cpp  glutil.h  logging.h  native-lib.cpp
app/src/main/cpp/Engine/: CMakeLists.txt  Engine.cpp  Engine.h
app/src/main/cpp/MessageBus/: CMakeLists.txt  MessageBus.cpp  MessageBus.h
app/src/main/cpp/Renderer/: CMakeLists.txt  Renderer.cpp  Renderer.h
app/src/main/cpp/Renderer/glutil/: CMakeLists.txt  glutil.cpp  glutil.h
app/src/main/cpp/engine/message_bus/: CMakeLists.txt  Message.h  MessageBus.cpp  MessageBus.h  MessageBusSubscriber.cpp  MessageBusSubscriber.h  MessageTest.cc  MessageTest.cpp  MessageTest.h
app/src/main/cpp/engine/renderer/: CMakeLists.txt  Renderer.cpp  Renderer.h  RendererTest.h  glutil.cpp  glutil.h
app/src/main/cpp/engine/renderer/glutil/: CMakeLists.txt  glutil.cpp
app/src/main/cpp/glm/: CMakeLists.txt
app/src/main/cpp/tests/: CMakeLists.txt  engine_test.h  gtest_wrapper.cpp  message_bus_test.h  renderer_test.h  testDriver.cpp
app/src/main/cpp/tests/nativehelper/: JNIHelp.h  JniInvocation.h  scoped_bytes.h  scoped_primitive_array.h  scoped_string_chars.h  scoped_utf_chars.h  toStringArray.h
app/src/main/shaders/: triangle.vert
app/src/test/java/com/michael/pong/: ExampleUnitTest.java  ExampleUnitTest.kt
gdd/: game.dia  gdd.tex  tdd.tex
gradle/wrapper/: gradle-wrapper.properties
